<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/book_final2">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

<android.support.v7.widget.Toolbar
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:elevation="6dp"
    android:id="@+id/toolbar_log_in"
    app:theme="@style/ThemeOverlay.AppCompat.Dark"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_header"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:src="@mipmap/book_icon" />

        <TextView
            android:id="@+id/header_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/cornsilk"
            android:paddingStart="4dp"
            android:textSize="22dp"
            android:text="@string/app_name"/>

    </LinearLayout>


</android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="serif"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:drawableLeft="@drawable/ic_action_email"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="  Enter your email"
        android:inputType="textEmailAddress"

        android:padding="10dp"
        android:textSize="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:layout_marginTop="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"

        android:drawableLeft="@drawable/ic_password_key"
        android:ems="10"
        android:hint="  Enter your password"
        android:inputType="textPassword"

        android:textSize="20dp"
        android:padding="10dp"
      />

    <Button
        android:id="@+id/button"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="42dp"

        android:background="@drawable/button_round_login"
        android:text="@string/log_in"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="270dp"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:layout_marginTop="20dp"

        android:background="@drawable/button_round_login"
        android:text="Forget Password"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="17sp" />


    <Button
        android:id="@+id/button3"
        android:layout_width="270dp"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:layout_marginTop="20dp"

        android:background="@drawable/button_round_login"
        android:text="@string/sign_up_now"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="17sp" />

    </LinearLayout>